--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "filesize": "^6.1.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-icons": "^3.9.0",
+    "react-iframe": "^1.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
